--- a/src/search/search.component.scss
+++ b/src/search/search.component.scss
@@ -1,3 +1,5 @@
+$caption-color: #00BFFF;
+
 form {
   text-align: left;
 
@@ -11,5 +13,47 @@ form {
     position : absolute;
     left : -10000px;
   } 
+}
+
+ul.people {
+    list-style: none;
+
+    li {
+        display : inline-block;
+        width : 100%;
+    }
+}
+
+figure {
+    img {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    figcaption {
+        margin-top: 10px;
+        font-size: 17px;
+        color: $caption-color;
+        font-weight: bold;
+    }
+}
+
+
+//tablet
+@media screen and (min-width : 800px) {
+    ul.people {
+        li {
+            width : 50%;
+        }
+    }
+}
+
+//desktop
+@media screen and (min-width : 1100px) {
+    ul.people {
+        li {
+            width : 33%;
+        }
+    }
 }
 
