--- a/src/search/search.component.html
+++ b/src/search/search.component.html
@@ -7,10 +7,7 @@
 <section>
     <ul class="people">
         <li *ngFor="let person of people | async" >
-            <figure>
-                <img [src]="person.img" alt="image of {{person.name}}"/>
-                <figcaption>{{person.name}}</figcaption>
-            </figure>
+            <person [person]="person"></person>
         </li>
     </ul>
 </section>
